框架搭建中
框架搭建中

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -3,19 +3,19 @@
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	id="WebApp_ID" version="3.1">
-	<display-name>pm</display-name>
+	<display-name>sht</display-name>
 
 	<!-- 配置shiro的filter start -->
 	<!-- 目地是将真正的filter加入到spring的bean容器 -->
-	<!-- <filter>
+	<filter>
 		<filter-name>shiroFilter</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-		设置spring控制filter的生命周期
+		<!-- 设置spring控制filter的生命周期 -->
 		<init-param>
 			<param-name>targetFilterLifecycle</param-name>
 			<param-value>true</param-value>
 		</init-param>
-		设置spring容器中filter的bean的id,如果不设置则找与<filter-name>一只的bean
+		<!-- 设置spring容器中filter的bean的id,如果不设置则找与<filter-name>一只的bean -->
 		<init-param>
 			<param-name>targetBeanName</param-name>
 			<param-value>shiroFilter</param-value>
@@ -24,7 +24,7 @@
 	<filter-mapping>
 		<filter-name>shiroFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
+	</filter-mapping>
 	<!-- 配置shiro的filter end -->
 
 
