--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,13 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.1.24</version>
 		</dependency>
+		<!-- 邮件 start -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+		<!-- 邮件 end --> 
 		<!-- 其他 jar end -->
 	</dependencies>
 	<!-- 依赖配置 end -->
