更新数据库;添加users表的money字段;修改部分字段备注;建立每个模块的静态变量接口;
更新数据库;添加users表的money字段;修改部分字段备注;建立每个模块的静态变量接口;

--- a/config/config.properties
+++ b/config/config.properties
@@ -1,2 +1,4 @@
 #\u7f51\u7ad9\u5730\u5740
-webaddr=http://localhost:80
+config.webaddr=http://localhost:80
+#\u9879\u76ee\u8d44\u6e90\u5b58\u653e\u8def\u5f84
+config.srcPath=d:\sht_src\
