--- a/config/config.properties
+++ b/config/config.properties
@@ -1,4 +1,7 @@
 #\u7f51\u7ad9\u5730\u5740
 config.webaddr=http://localhost:80
-#\u9879\u76ee\u8d44\u6e90\u5b58\u653e\u8def\u5f84
-config.srcPath=d:\sht_src\
+#\u9879\u76ee\u8d44\u6e90\u5b58\u653e\u8def\u5f84,
+#\u89c4\u5b9a:
+#	users\u5934\u50cf\u50a8\u5b58\u5728%config.srcHome%users\headimgs\\u6587\u4ef6\u5939\u4e0b
+#	goods\u5546\u54c1\u56fe\u7247\u50a8\u5b58\u5728%config.srcHome%users\imgs\\u6587\u4ef6\u5939\u4e0b
+config.srcHome=d:\\sht_src\\
