--- a/config/config.properties
+++ b/config/config.properties
@@ -4,3 +4,7 @@ config.webaddr=http://localhost:80
 config.src.users.heaimgs=d:\\sht_src\\users\\headimgs\\
 #\u5546\u54c1\u56fe\u7247\u8d44\u6e90\u5b58\u653e\u8def\u5f84
 config.src.goods.imgs=d:\\sht_src\\goods\\imgs\\
+#\u7528\u6237\u5934\u50cf\u538b\u7f29\u5c3a\u5bf8\u7248\u672c
+config.users.headimgs.sizes=40,80,200
+#\u5546\u54c1\u56fe\u7247\u5c3a\u5bf8\u7248\u672c
+config.goods.imgs.sizes=30,200
