--- a/config/config.properties
+++ b/config/config.properties
@@ -5,12 +5,16 @@ config.src.users.heaimgs=d:\\sht_src\\users\\headimgs\\
 #\u5546\u54c1\u56fe\u7247\u8d44\u6e90\u5b58\u653e\u8def\u5f84
 config.src.goods.imgs=d:\\sht_src\\goods\\imgs\\
 #\u7528\u6237\u5934\u50cf\u538b\u7f29\u5c3a\u5bf8\u7248\u672c
-config.users.headimgs.sizes=30\uff0c60\uff0c160
+config.users.headimgs.sizes=30,60,160
 #\u5546\u54c1\u56fe\u7247\u5c3a\u5bf8\u7248\u672c
 config.goods.imgs.sizes=30,200
 #\u7528\u6237\u5934\u50cf\u5716\u7247\u985e\u578b
 config.users.headimgs.types=jpg,png,gif
 #\u5546\u54c1\u56fe\u7247\u985e\u578b
 config.goods.imgs.types=jpg,png,gif
-#\u7528\u6237\u9ed8\u8ba4\u5934\u50cf,\u5f53\u7528\u6237\u6ca1\u6709\u5934\u50cf\u65f6,\u6216\u8005\u7cfb\u7edf\u627e\u4e0d\u5230headimg\u65f6\u8c03\u7528\u8be5\u9ed8\u8ba4\u56fe\u7247
+#\u7528\u6237\u5934\u50cf\u5716\u7247\u4e0a\u4f20\u5927\u5c0f,\u5355\u4f4dk
+config.users.headimgs.maxsize=1000
+#\u5546\u54c1\u56fe\u7247\u4e0a\u4f20\u5927\u5c0f,\u5355\u4f4dk
+config.goods.imgs.maxsize=1000
+#\u7528\u6237\u9ed8\u8ba4\u5934\u50cf
 config.users.headimgs.default=200_default.png
