--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,20 @@
 		   <version>0.4.8</version>
 		</dependency>
 		<!-- 图片压缩 end -->
+		<!-- 阿里支付寶sdk start -->
+		<dependency>
+		    <groupId>cn.featherfly</groupId>
+		    <artifactId>alipay-sdk</artifactId>
+		    <version>1.1.3</version>
+		</dependency> 
+ 
+		<dependency>
+		    <groupId>commons-logging</groupId>
+		    <artifactId>commons-logging</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+		<!-- 阿里支付寶sdk end -->
+		
 		<!-- 其他 jar end -->
 	</dependencies>
 	<!-- 依赖配置 end -->
